package main.java.com.parkingLot.enums;

public enum ParkingSpotType {
    BIG, SMALL, LARGE
}
