package main.java.com.parkingLot.enums;

public enum VehicleType {
    MOTORBIKE, CAR, TRUCK
}
