package main.java.com.parkingLot.strategy;

public interface PaymentStrategy {
    void processPayment(double amount);
}
